# AGOPD

./: .gitignore  README.md  main.py  pyproject.toml  当前实验.md  研究思路.md  限制条件.md
agopd/: __init__.py  lr_tip.py  offline_eval.py
agopd/experiments/: distillation_uplift_eval.py  generate_synthetic_prompts.py  gradient_improvement_eval.py  merge_gradient_improvement_reports.py  merge_lr_tip_reports.py  offline_lr_tip_eval.py  prepare_real_prompts.py  sweep_gradient_fusion.py
data/: prompts.jsonl  prompts_1024.jsonl  real_prompts_512.jsonl
scripts/: launch_lr_tip_1024_256_shards.sh  launch_lr_tip_grad_improvement_real32.sh  launch_lr_tip_real512_128tok.sh  summarize_lr_tip_reports.py  summarize_uplift_reports.py
tests/: test_lr_tip.py
实验/: lr_tip_entropy_fixed_results.md  lr_tip_mvp_results.md  lr_tip_mvp_summary.md  lr_tip_mvp_usage.md  实验运行手册.md
